--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
 	box-sizing: border-box;
-	margin: auto;
+	margin: 0px;
 }
 
 *,
@@ -11,8 +11,8 @@ body {
 
 .container {
 	background-color: #fafafa;
-	width: 950px;
-	height: 300px;
+	width: 300px;
+	height: 600px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -27,8 +27,8 @@ body {
 }
 
 .carousel {
-	min-width: 950px;
-	max-width: 950px;
+	min-width: 300px;
+	max-width: 300px;
 	margin-left: auto;
 	margin-right: auto;
 	padding-left: 0px;
@@ -48,10 +48,10 @@ body {
 	align-items: center;
 	justify-content: space-between;
 	position: absolute;
-	top: 270px;
+	top: 575px;
 	bottom: 125px;
-	right: 310px;
-	left: 310px;
+	right: 25px;
+	left: 25px;
 	z-index: 1000;
 }
 
@@ -66,8 +66,8 @@ body {
 	cursor: pointer;
 	display: flex;
 	align-items: center;
-	width: 38px;
-	height: 38px;
+	width:30px;
+	height: 30px;
 	opacity: .5;
 	justify-content: center;
 	transition: 0.3s all;
